--- a/docker/service_conf.yaml.template
+++ b/docker/service_conf.yaml.template
@@ -13,12 +13,12 @@ mysql:
   max_connections: 900
   stale_timeout: 300
   max_allowed_packet: ${MYSQL_MAX_PACKET:-1073741824}
-minio:
-  user: '${MINIO_USER:-rag_flow}'
-  password: '${MINIO_PASSWORD:-infini_rag_flow}'
-  host: '${MINIO_HOST:-minio}:9000'
-  bucket: '${MINIO_BUCKET:-}'
-  prefix_path: '${MINIO_PREFIX_PATH:-}'
+# minio:
+#   user: '${MINIO_USER:-rag_flow}'
+#   password: '${MINIO_PASSWORD:-infini_rag_flow}'
+#   host: '${MINIO_HOST:-minio}:9000'
+#   bucket: '${MINIO_BUCKET:-}'
+#   prefix_path: '${MINIO_PREFIX_PATH:-}'
 es:
   hosts: 'http://${ES_HOST:-es01}:9200'
   username: '${ES_USER:-elastic}'
@@ -65,15 +65,15 @@ user_default_llm:
 #   port: 5432
 #   max_connections: 100
 #   stale_timeout: 30
-# s3:
-#   access_key: 'access_key'
-#   secret_key: 'secret_key'
-#   region: 'region'
-#   endpoint_url: 'endpoint_url'
-#   bucket: 'bucket'
-#   prefix_path: 'prefix_path'
-#   signature_version: 'v4'
-#   addressing_style: 'path'
+s3:
+  access_key: '${S3_ACCESS_KEY}'
+  secret_key: '${S3_SECRET_KEY}'
+  region: '${S3_REGION:-auto}'
+  endpoint_url: '${S3_ENDPOINT}'
+  bucket: '${S3_BUCKET:-ragflow-storage}'
+  prefix_path: '${S3_PREFIX_PATH:-}'
+  signature_version: 'v4'
+  addressing_style: 'virtual'
 # oss:
 #   access_key: '${ACCESS_KEY}'
 #   secret_key: '${SECRET_KEY}'
