--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -4,6 +4,10 @@ USER root
 
 # Copy our customized configuration and entrypoint
 COPY docker/service_conf.yaml.template /ragflow/conf/service_conf.yaml.template
+# Copy RAGFlow-specific Nginx configurations
+COPY docker/nginx/nginx.conf /etc/nginx/nginx.conf
+COPY docker/nginx/ragflow.conf /etc/nginx/conf.d/ragflow.conf
+COPY docker/nginx/proxy.conf /etc/nginx/proxy.conf
 COPY docker/entrypoint.sh /ragflow/entrypoint.sh
 
 # Ensure entrypoint is executable
