--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -8,6 +8,10 @@ COPY docker/service_conf.yaml.template /ragflow/conf/service_conf.yaml.template
 COPY docker/nginx/nginx.conf /etc/nginx/nginx.conf
 COPY docker/nginx/ragflow.conf /etc/nginx/conf.d/ragflow.conf
 COPY docker/nginx/proxy.conf /etc/nginx/proxy.conf
+
+# Remove default nginx config to prevent it from overriding ragflow.conf
+RUN rm -f /etc/nginx/conf.d/default.conf
+
 COPY docker/entrypoint.sh /ragflow/entrypoint.sh
 
 # Ensure entrypoint is executable
